--- a/mvcdemo/src/main/webapp/WEB-INF/web.xml
+++ b/mvcdemo/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
   <url-pattern>/</url-pattern>
   </servlet-mapping>
   
-	<filter>
+	<!-- <filter>
 	<filter-name>springSecurityFilterChain</filter-name>
 	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
@@ -30,5 +30,5 @@
 		<listener-class>
 			org.springframework.web.context.ContextLoaderListener
 		</listener-class> 
-</listener>
+</listener> -->
 </web-app>
