--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+InteriorFront/src/main/webapp/resources/images/books.jpg
+InteriorFront/src/main/webapp/resources/images/lava.jpg
