--- a/InteriorFront/src/main/webapp/WEB-INF/web.xml
+++ b/InteriorFront/src/main/webapp/WEB-INF/web.xml
@@ -28,4 +28,7 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	<error-page>
+		<location>/WEB-INF/views/error.jsp</location>
+	</error-page>
 </web-app>
