--- a/InteriorBackEnd/pom.xml
+++ b/InteriorBackEnd/pom.xml
@@ -15,6 +15,19 @@
 	</properties>
 
 	<dependencies>
+	<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+	<dependency>
+			    <groupId>org.hibernate</groupId>
+			    <artifactId>hibernate-validator</artifactId>
+			    <version>5.4.1.Final</version>
+	</dependency>
+	
+	<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+		</dependency>
+	
 	
 	<!-- https://mvnrepository.com/artifact/junit/junit -->
 <dependency>
