Email Admin and Image Product
Email Admin and Image Product

--- a/InteriorFront/pom.xml
+++ b/InteriorFront/pom.xml
@@ -132,7 +132,21 @@
 			<version>8.0</version>
 			<scope>provided</scope>
 		</dependency>
-
+		
+		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4.7</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.integration/spring-integration-mail -->
+		<dependency>
+		    <groupId>org.springframework.integration</groupId>
+		    <artifactId>spring-integration-mail</artifactId>
+		    <version>5.0.2.RELEASE</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.niit</groupId>
 			<artifactId>InteriorBackEnd</artifactId>
