--- a/InteriorFront/pom.xml
+++ b/InteriorFront/pom.xml
@@ -18,7 +18,17 @@
 
 	<dependencies>
 		
-
+	<dependency>
+	    <groupId>com.itextpdf</groupId>
+	    <artifactId>itextpdf</artifactId>
+	    <version>5.0.6</version>
+	</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.activation/activation -->
+<dependency>
+    <groupId>javax.activation</groupId>
+    <artifactId>activation</artifactId>
+    <version>1.1</version>
+</dependency>
 		
 		<!-- Spring Security -->
 		<dependency>
