--- a/InteriorFront/.classpath
+++ b/InteriorFront/.classpath
@@ -29,5 +29,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Admin/Downloads/checksum_2.0.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
